# emergency-fund

./: README.md  detect_best_csp_savings_account.py  eda.ipynb  generate_apy_history.py  institutions.seed.csv  savings_accounts.seed.csv  schema.sql  test_detect_best_csp_savings_account.py
apy_terms_scraper/: Cargo.toml
apy_terms_scraper/src/: apy_terms_html.rs  config.rs  db.rs  everbank_html2text_strategy.rs  html2text_strategy.rs  html2text_strategy_registry.rs  institution.rs  lib.rs  main.rs  openai.rs  sofi_bank_html2text_strategy.rs  vec_comma_str.rs
apy_terms_scraper/src/parse_html/: factory.rs  mod.rs  registry.rs
apy_terms_scraper/src/parse_html/strategy/: everbank.rs  mod.rs  sofi_bank.rs  strategy.rs
apy_terms_scraper/src/savings_account/: apy_history_record_aggr.rs  apy_history_record_repo.rs  mod.rs  savings_account_aggr.rs  savings_account_repo.rs
db/: institutions.seed.csv  risk_free_rate.seed.csv  savings_accounts.seed.csv  savings_accounts_apy_history.seed.csv  schema.sql
sharpe_ratio/: .env.example  requirements.txt
sharpe_ratio/src/: eda.ipynb  generate_apy_history.ipynb  sharpe_ratio.ipynb
src/: eda.ipynb  find_best_by_sharpe_ratio.ipynb  find_best_by_sharpe_ratio.py  find_best_csp.ipynb  find_best_csp.py  find_best_savings_account_by_sharpe_ratio.ipynb  find_profitability.ipynb  find_profitability.py  generate_apy_history.ipynb  generate_apy_history.py  sharpe_ratio.ipynb
src/app/: apy_history_generation.py  balance.py  best_csp_savings_account.py  best_csp_savings_account.test.py  cli_args.py  sharpe_ratio.py
src/domain/: account_sharpe_ratio.py  balance.py  calc_balance.py  calc_balance.test.py  calc_profitability.py  calc_sharpe_ratio.py  compound_interest_math.py  csp.py  datetime.py  sharpe_ratio_math.py
src/infra/: db_connection.py  risk_free_rate_repo.py  savings_account_apy_history_repo.py  (+2 more)
(+6 files in other folders)
