[package]
name = "apy_terms_scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-openai = "0.23.4"
dotenv = "0.15.0"
envy = "0.4.2"
reqwest = { version = "0.12.5", features = ["blocking"] }
rusqlite = "0.31.0"
scraper = "0.19.1"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
tokio = { version = "1", features = ["full"] }

[lib]
name = "apy_terms_scraper"
path = "src/lib.rs"

[[bin]]
name = "extract"
path = "src/bin/extract.rs"

[[bin]]
name = "load"
path = "src/bin/load.rs"
