[package]
name = "apy_terms_scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-openai = "0.23.4"
chrono = "0.4.38"
dotenv = "0.15.0"
env_logger = "0.11.4"
envy = "0.4.2"
log = "0.4.22"
reqwest = { version = "0.12.5", features = ["blocking"] }
rusqlite = { version = "0.31.0", features = ["functions"] }
scraper = "0.19.1"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
tokio = { version = "1", features = ["full"] }
url = "2.5.2"
